# skills

./: README.md
dev-council/: GUIDE.md  README.md  SKILL.md
dev-council/runner/: .gitignore  GUIDE.md  README.md  pyproject.toml
dev-council/runner/examples/: personas.autox-hybrid.yaml  personas.providers.yaml
dev-council/runner/src/council/: __init__.py  __main__.py  chairman.py  cli.py  config_loader.py  context.py  dispatch.py  env.py  format.py  input.py  metering.py  peer_review.py  prompts.py  runner.py  sdk_client.py
dev-council/runner/src/council/backends/: __init__.py  _provider_util.py  anthropic_backend.py  base.py  cursor.py  google_backend.py  openai_backend.py  registry.py
dev-council/runner/src/council/defaults/: backends.yaml  personas.yaml  tiers.yaml
